---
source: compiler-core/src/fsharp/tests/pipes.rs
expression: "pub fn x(f) {\n  case 1 |> f {\n    x -> x\n  }\n}"
---
module rec my.``mod``

let x<'a> (f: int64 -> 'a) = begin
    match begin
        let _pipe = 1L
        (f _pipe)
    end with
    | x ->
        x
end
